[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/actors/enemy_level_3/actor_enemy_level_3_script.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 30.9251

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -30.5078, -30.328, -29.0095, 25.8585, 25.6787, 29.6042, 30.9228, -26.5823 )

[sub_resource type="CircleShape2D" id=3]
radius = 18.0178

[sub_resource type="CircleShape2D" id=4]
radius = 28.7131

[node name="EnemyLevel3" type="KinematicBody2D"]
pause_mode = 2
collision_layer = 4160
collision_mask = 64
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 4097

[node name="RayCastFacingDirection" type="RayCast2D" parent="."]
cast_to = Vector2( 256, 0 )

[node name="StandstillTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
show_behind_parent = true
occluder = SubResource( 2 )

[node name="EnemySpawnCollisionArea" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemySpawnCollisionArea"]
shape = SubResource( 3 )

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 4 )
[connection signal="timeout" from="StandstillTimer" to="." method="_on_StandstillTimer_timeout"]
[connection signal="area_entered" from="EnemySpawnCollisionArea" to="." method="_on_EnemySpawnCollisionArea_area_entered"]
[connection signal="area_entered" from="DamageArea" to="." method="_on_DamageArea_area_entered"]
[connection signal="area_exited" from="DamageArea" to="." method="_on_DamageArea_area_exited"]
